--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.4",
     "git-remote-origin-url": "^3.1.0",
     "git-url-parse": "^11.6.0",
-    "simple-git": "^3.7.1"
+    "simple-git": "^3.7.1",
+    "test": "^0.6.0"
   }
 }
